edited content on the landing page

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 <body class="landing-page">
 
 <!-- Simple splash screen-->
-<div class="splash"> <div class="color-line"></div><div class="splash-title"><h1>The ReFactory</h1><p>Special Admin Theme for small and medium webapp with very clean and aesthetic style and feel. </p><div class="spinner"> <div class="rect1"></div> <div class="rect2"></div> <div class="rect3"></div> <div class="rect4"></div> <div class="rect5"></div> </div> </div> </div>
+<div class="splash"> <div class="color-line"></div><div class="splash-title"><h1>The ReFactory</h1><p>Providing the toolset to disect your technology migration. </p><div class="spinner"> <div class="rect1"></div> <div class="rect2"></div> <div class="rect3"></div> <div class="rect4"></div> <div class="rect5"></div> </div> </div> </div>
 <!--[if lt IE 7]>
 <p class="alert alert-danger">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
@@ -48,7 +48,7 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a class="page-scroll" href="#page-top">Home</a></li>
-                <li><a class="page-scroll" page-scroll href="#components">UI</a></li>
+                <li><a class="page-scroll" page-scroll href="#components">About</a></li>
                 <li><a class="page-scroll" page-scroll href="#features">Features</a></li>
                 <li><a class="page-scroll" page-scroll href="#team">Team</a></li>
                 <li><a class="page-scroll" page-scroll href="#pricing">Pricing </a></li>
@@ -65,13 +65,13 @@
     <div class="container">
         <div class="heading">
             <h1>
-                Welcome to Homer landing page
+                Welcome The_ReFactory
             </h1>
-            <span>Contrary to popular belief, Lorem Ipsum is not<br/> simply random text for print.</span>
+            <span>Making migration projects easier through <br/> transperancy, data, and accountability.</span>
             <p class="small">
-                Lorem Ipsum is simply dummy text of the printing and tLorem Ipsum is  Lorem Ipsum is simply dummy of the simply dummy text of the ypesetting.
+                Technology migrations can be difficult, involving a lot of moving parts. The_ReFactory dials into the pulse of the migration and provide diagnostics and coding assessment data.
             </p>
-            <a href="#" class="btn btn-success btn-sm">Learn more</a>
+            <a href="#about" class="btn btn-success btn-sm">Learn more</a>
         </div>
         <div class="heading-image animate-panel" data-child="img-animate" data-effect="fadeInRight">
             <p class="small">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -91,19 +91,19 @@
     <div class="container">
     <div class="row">
         <div class="col-md-4">
-            <h4>HTML5 & CSS3</h4>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus.</p>
-            <p><a class="navy-link btn btn-sm" href="#" role="button">Learn more</a></p>
+            <h4>Slick & Accessible</h4>
+            <p>This app is built with the client in mind. Find it useable on all platforms, device, and browsers. No more headaches or hard-to-access toolsets.</p>
+            <p><a class="navy-link btn btn-sm" href="/auth/login" role="button">Learn more</a></p>
         </div>
         <div class="col-md-4">
-            <h4>Staggering Animations</h4>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of.</p>
-            <p><a class="navy-link btn btn-sm" href="#" role="button">Learn more</a></p>
+            <h4>Driven & Proven Results</h4>
+            <p>Once goals are set, our team stives to meet and exceed them as if they were working towards the same objective. No more chasing down answers, they all are here. </p>
+            <p><a class="navy-link btn btn-sm" href="/auth/login" role="button">Learn more</a></p>
         </div>
         <div class="col-md-4">
-            <h4>Unique Dashboard</h4>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-            <p><a class="navy-link btn btn-sm" href="#" role="button">Learn more</a></p>
+            <h4>Data-Driven</h4>
+            <p>Plugging directly into our teams analytics tools, you see what our coders see. Leveraging the data in order to make critical decisions in the market. </p>
+            <p><a class="navy-link btn btn-sm" href="/auth/login" role="button">Learn more</a></p>
         </div>
     </div>
     </div>
