--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
             <p><a class="navy-link btn btn-sm" href="/auth/login" role="button">Learn more</a></p>
         </div>
         <div class="col-md-4">
-            <h4>Driven & Proven Results</h4>
+            <h4>Proven Results</h4>
             <p>Once goals are set, our team stives to meet and exceed them as if they were working towards the same objective. No more chasing down answers, they all are here. </p>
             <p><a class="navy-link btn btn-sm" href="/auth/login" role="button">Learn more</a></p>
         </div>
