edits to dashboard for each route:

--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
             </h1>
             <span>Making migration projects easier through <br/> transperancy, data, and accountability.</span>
             <p class="small">
-                Technology migrations can be difficult, involving a lot of moving parts. The_ReFactory dials into the pulse of the migration and provide diagnostics and coding assessment data.
+                Technology migrations can be difficult, involving a lot of moving parts. ReFactory dials into the pulse of the migration and provide diagnostics and coding assessment data.
             </p>
             <a href="#about" class="btn btn-success btn-sm">Learn more</a>
         </div>
@@ -96,7 +96,7 @@
             <p><a class="navy-link btn btn-sm" href="/auth/login" role="button">Learn more</a></p>
         </div>
         <div class="col-md-4">
-            <h4>Proven Results</h4>
+            <h4>Driven & Proven Results</h4>
             <p>Once goals are set, our team stives to meet and exceed them as if they were working towards the same objective. No more chasing down answers, they all are here. </p>
             <p><a class="navy-link btn btn-sm" href="/auth/login" role="button">Learn more</a></p>
         </div>
