eamil functionality working

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,7 @@
     <!-- Page title -->
     <title>The ReFactory</title>
 
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!--<link rel="shortcut icon" type="image/ico" href="favicon.ico" />-->
+    <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
 
     <!-- Vendor styles -->
     <link rel="stylesheet" href="stylesheets/vendor/fontawesome/css/font-awesome.css" />
