--- a/public/index.html
+++ b/public/index.html
@@ -51,8 +51,7 @@
                 <li><a class="page-scroll" page-scroll href="#features">Features</a></li>
                 <li><a class="page-scroll" page-scroll href="#clients">Clients</a></li>
                 <li><a class="page-scroll" page-scroll href="#contact">Contact</a></li>
-                <li><a href="/auth/login">Login </a></li>
-                <li><a href="/auth/register">Register</a></li>
+                <li><a href="/auth/select">Login </a></li>
             </ul>
         </div>
     </div>
