readme updated & package updated

--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,8 @@
         <div class="col-md-6">
           <h4 class="m-t-xxxl">Special contacts view</h4>
           <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem
-            Ipsum.</p>
+            Ipsum.
+          </p>
         </div>
         <div class="col-md-6">
           <img src="images/landing/s2.png" class="img-responsive">
@@ -145,14 +146,16 @@
         <div class="col-md-6">
           <h4 class="m-t-xxl">Additional analytical components</h4>
           <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem
-            Ipsum.</p>
+            Ipsum.
+          </p>
         </div>
       </div>
       <div class="row  m-t-xl">
         <div class="col-md-6">
           <h4 class="m-t-xxl">Special designed project view</h4>
           <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem
-            Ipsum.</p>
+            Ipsum.
+          </p>
         </div>
         <div class="col-md-6">
           <img src="images/landing/s1.png" class="img-responsive">
@@ -165,7 +168,8 @@
         <div class="col-md-6">
           <h4 class="m-t-xxl">Many widets components</h4>
           <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem
-            Ipsum.</p>
+            Ipsum.
+          </p>
         </div>
       </div>
     </div>
@@ -402,6 +406,19 @@
       });
 
     });
+  </script>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-68112181-3"></script>
+
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-68112181-3');
   </script>
 
 </body>
