removed animate-panel

--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
         </p>
         <a href="#about" class="btn btn-success btn-sm">Learn more</a>
       </div>
-      <div class="heading-image animate-panel" data-child="img-animate" data-effect="fadeInRight">
+      <div class="heading-image" data-child="img-animate" data-effect="fadeInRight">
         <p class="small">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         <img class="img-animate" src="images/landing/c1.jpg">
         <img class="img-animate" src="images/landing/c2.jpg">
